--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-conectar</title>
-    <link rel="icon" href="./src/assets/NewIcon2.png">
-
+    <link rel="icon" href="/src/assets/NewIcon2.png">
   </head>
   <body>
-    <div id="root">
-    </div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
 </html>
